# aws

./: .gitattributes  .gitignore  LICENSE  README.md  aws.py  cdk.json  environment.yml  package-lock.json  pyproject.toml
.aws/: config
.github/workflows/: deploy.yml
